<resources>
    <string name="app_name">App2</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="Sunny">Sunny</string>
    <string name="_22">22</string>
    <string name="_25">25</string>
    <string name="_18">18</string>
    <string name="_50">50%</string>
    <string name="C">C</string>
    <string name="ºC">ºC</string>
    <string name="wind_speed">%d km/h</string>
</resources>