<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#66C5FF">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo_small"/>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/Today"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/today"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:text="@string/Tomorrow"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/linearlayout1"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_image_partlycloudy"/>

    <TextView
        android:id="@+id/sunny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        android:text="@string/Sunny"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/weather"
        />




        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunny"
            android:text="@string/_22"
            android:textSize="64sp"
            android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/celcius"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ºC"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@id/sunny" />




    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/temperature">

        <TextView
            android:id="@+id/maxtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/ic_max_12px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mintemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            app:drawableLeftCompat="@drawable/ic_min_12px"
            android:text="@string/_18"
            android:textSize="14sp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2"
        android:orientation="horizontal"
        android:layout_marginTop="49dp">

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_50"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            app:drawableTopCompat="@drawable/ic_humidity_24px" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_50"
            android:layout_marginStart="56dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            app:drawableTopCompat="@drawable/ic_wind_24px" />

        <TextView
            android:id="@+id/precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_50"
            android:layout_marginStart="47dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            app:drawableTopCompat="@drawable/ic_precipitation_24px" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>


